mobile styles fix -  add wrap for Cwiczenia

--- a/src/styles/Cwiczenia.css
+++ b/src/styles/Cwiczenia.css
@@ -21,6 +21,7 @@
    list-style-type: none; /* Brak punktów w liście */
    padding: 0; /* Brak paddingu */
    display: flex; /* Wyświetlenie w formie rzędu */
+   flex-wrap: wrap;
    justify-content: space-around; /* Rozłożenie elementów nawigacji */
 }
 
